# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/protobuf/proto_library.gni")

proto_library("shuffler_service") {
  proto_in_dir = "//cobalt"
  sources = [
    "shuffler.proto",
  ]
  import_dirs = [ "//third_party/protobuf/src" ]
  generate_python = false
  generator_plugin_label = "//third_party/grpc:grpc_cpp_plugin"
  generator_plugin_suffix = ".grpc.pb"
  cc_generator_options = "lite"

  deps = [
    "//cobalt:cobalt_proto",
    "//third_party/grpc:grpc++",
  ]

  extra_configs = [
     "//cobalt:cobalt_config",
  ]
}
