# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("forculus_encoder") {
  sources = [
    "field_element.cc",
    "field_element.h",
    "forculus_encrypter.cc",
    "forculus_encrypter.h",
    "forculus_utils.cc",
    "forculus_utils.h",
    "polynomial_computations.cc",
    "polynomial_computations.h"
  ]
  configs += [
    "//third_party/cobalt:cobalt_config",
  ]

  public_deps = [
    "//third_party/cobalt:cobalt_proto",
    "//third_party/cobalt/config:cobalt_config_proto",
    "//third_party/cobalt/encoder:client_secret",
    "//third_party/cobalt/util:datetime_util",
    "//third_party/cobalt/util/crypto_util"
  ]
}
